--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#404140</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#038D67</color>
+    <color name="green">#017B59</color>
+    <color name="transparent_green">#D7E8E2</color>
 </resources>
